--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     <section class="intro">
       <div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2>
+      <h2 class="subheading">Давайте познакомимся</h2></div>
+      <div class="container">
       <h3>Пара слов о себе</h3>
       <p>Начинающий разработчик сайтов. Я полон энтузиазма и берусь за любую работу.</p>
       <h3>Чем могу быть полезен</h3>
@@ -39,8 +40,8 @@
 
     <section class="portfolio">
       <div class="container">
-      <h2 class="subheading">Мои работы</h2>
-
+      <h2 class="subheading">Мои работы</h2></div>
+      <div class="container">
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
