--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="container">
     <header class="page-header">
       <div class="container">
-      Контакты:<br>
-      г.Воронеж<br>
-      +7 (950) 75 75 348<br>
-      eseldev@yandex.ru
+        <a class="header-email"
+        href="mailto:eseldev@yandex.ru">eseldev@yandex.ru</a>
+        <a class="header-phone" 
+        href="tel:+79507575348">+7 950 75 75 348</a>
     </div>
     </header>
 
@@ -29,8 +29,10 @@
 
     <section class="intro">
       <div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2></div>
-      <div class="container">
+      <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user2.jpg" width="928" height="536" alt="Фотография Сельдева Егора">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Начинающий разработчик сайтов. Я полон энтузиазма и берусь за любую работу.</p>
       <h3>Чем могу быть полезен</h3>
@@ -40,10 +42,14 @@
 
     <section class="portfolio">
       <div class="container">
-      <h2 class="subheading">Мои работы</h2></div>
-      <div class="container">
+      <h2 class="subheading">Мои работы</h2>
+      
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
+      <p>Мой первый небольшой лендинг</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -52,9 +58,10 @@
 
     <footer class="page-footer">
       <div class="container">
-      eseldev@yandex.ru<br>
-      +7 (950) 75 75 348<br>
-      г.Воронеж
+      <a class="footer-email"
+      href="mailto:eseldev@yandex.ru">eseldev@yandex.ru</a>
+      <a class="footer-phone"
+      href="tel:+79507575348">+7 950 75 75 348</a>
     </div>
     </footer>
     </div>
