--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="files/user2.jpg" width="928" height="536" alt="Фотография Сельдева Егора">
+        <img src="files/user2.JPG" width="928" height="536" alt="Фотография Сельдева Егора">
       </figure>
       <h3>Пара слов о себе</h3>
       <p>Начинающий разработчик сайтов. Я полон энтузиазма и берусь за любую работу.</p>
