--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div class="container">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Сельдев Егор - Портфолио разработчика</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     </div>
   </head>
